--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
   - title: "Home"
-    url: /index.html
-  - title: "Teaching"
-    url: /teaching/
-  - title: "Downloads"
-    url: /year-archive/
-   - title: "Quick-Start Guide"
-     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: [Home](index.md)
+  - title: "About"
+    url: [About](about.md)
+  - title: "CV"
+    url: [CV](public_cv.pdf)
+   - title: "Research"
+     url: [Research](research.md)
