--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ title: Charlie Smith
 
 sidebar:
   - name: CV
-     link: public_cv.pdf
+    link: /public_cv.pdf
   - name: GitHub
     link: https://github.com/CharlesRSmith44
